<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2023-present the original author or authors.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.ai</groupId>
        <artifactId>spring-ai-parent</artifactId>
        <version>2.0.0-M6</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>
    <artifactId>spring-ai-weaviate-store</artifactId>
    <packaging>jar</packaging>
    <name>Spring AI Vector Store - Weaviate </name>
    <url>https://github.com/spring-projects/spring-ai</url>

    <scm>
        <url>https://github.com/spring-projects/spring-ai</url>
        <connection>scm:git:git://github.com/spring-projects/spring-ai.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/spring-projects/spring-ai.git</developerConnection>
    </scm>

    <properties>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.source>17</maven.compiler.source>
    </properties>

	<dependencyManagement>
		<dependencies>
			<!-- Override transitive grpc-netty-shaded to fix CVE-2025-55163 -->
			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-netty-shaded</artifactId>
				<version>${grpc-netty-shaded.version}</version>
			</dependency>
			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-protobuf</artifactId>
				<version>${grpc-netty-shaded.version}</version>
			</dependency>
			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-protobuf-lite</artifactId>
				<version>${grpc-netty-shaded.version}</version>
			</dependency>
			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-api</artifactId>
				<version>${grpc-netty-shaded.version}</version>
			</dependency>
			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-stub</artifactId>
				<version>${grpc-netty-shaded.version}</version>
			</dependency>
			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-core</artifactId>
				<version>${grpc-netty-shaded.version}</version>
			</dependency>
			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-context</artifactId>
				<version>${grpc-netty-shaded.version}</version>
			</dependency>
			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-util</artifactId>
				<version>${grpc-netty-shaded.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.ai</groupId>
            <artifactId>spring-ai-vector-store</artifactId>
            <version>${project.parent.version}</version>
        </dependency>

        <dependency>
            <groupId>io.weaviate</groupId>
            <artifactId>client</artifactId>
            <version>${weaviate-client.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.projectlombok</groupId>
                    <artifactId>lombok</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- TESTING -->
        <dependency>
            <groupId>org.springframework.ai</groupId>
            <artifactId>spring-ai-transformers</artifactId>
            <version>${project.parent.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.ai</groupId>
            <artifactId>spring-ai-test</artifactId>
            <version>${project.parent.version}</version>
            <scope>test</scope>
        </dependency>

		<dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers-weaviate</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers-junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-observation-test</artifactId>
			<scope>test</scope>
		</dependency>

    </dependencies>

</project>
